--- a/list.html
+++ b/list.html
@@ -6,12 +6,12 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../main.css">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <header>
             <div class="logo">
-                <img src="../assets/images/logo-unifinder.png" alt="logo"> <h1>UniFinder</h1>
+                <img src="assets/images/logo-unifinder.png" alt="logo"> <h1>UniFinder</h1>
             </div>
             <ul class="options">
 
