--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             function navigateToList() {
                 var marks = document.getElementById('marksInput').value;
                 if(marks !== null && marks !== 0 & marks !== ""){
-                    window.location.href = "app/list.html?marks=" + marks;
+                    window.location.href = "list.html?marks=" + marks;
                 }
                 else{
                     window.alert("لم تقم بإدخال علامتك!");
