filter and adata

--- a/index.html
+++ b/index.html
@@ -96,13 +96,8 @@
                     </h4>
                     <p>
                         توفر عمان العربية مجموعة واسعه من الخصومات على اسعار الساعات لمختلف التخصصات في مختلف الكليات وتوفر اضافة الى ذلك مجموعة من الخدمات التس تسهل على الطلاب عملية التعليم ومنها المواصلات والارشاد الاكاديمي
-                        #سجل لدراسة #البكالوريوس أو #الماجستير – يتوفر محاضرات أيام #السبت و#مسائية بالإضافة للمحاضرات الاعتيادية
-                        سجل الان في جامعة عمان العربية - غير ربحية تستقطب المتميزين.
-                        خصومات لكامل فترة الدراسة تصل الى 90% وتخضع للشروط والأحكام في الجامعة. يتوفر #خصومات اضافية لكامل فترة الدراسة – استفسر عنها!
-                        للتواصل عبر الخط الساخن للاستفسار او التسجيل:   0798877440 
-                        لمزيد من التفاصيل عن التخصصات ورسوم الساعات والخصومات والية التسجيل
                     </p>
-                     <button>
+                     <button onclick="goToAAU()">
                         <i class="bi bi-arrow-left"></i>
                         قم بالتسجيل في جامعة عمان العربية
                      </button>
@@ -123,6 +118,9 @@
                 else{
                     window.alert("لم تقم بإدخال علامتك!");
                 }
+            }
+            function goToAAU(){
+                window,location.href = "https://www.aau.edu.jo/ar"
             }
         </script>
     </body>
