--- a/majorDetails.html
+++ b/majorDetails.html
@@ -107,6 +107,10 @@
                     document.getElementById("uniDetails").innerText = uData2;
                     document.getElementById("universityImage").src = "assets/images/phu.jpeg" ;
                 }
+                else if (majorDetails.university == "جامعة الشرق الاوسط ") {
+                    document.getElementById("uniDetails").innerText = uData2;
+                    document.getElementById("universityImage").src = "assets/images/meu.jpg" ;
+                }
             } else {
                 alert("No details found for the specified ID.");
             }
